New: Build website's about component

--- a/front-end-react/public/index.html
+++ b/front-end-react/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#18181b" />
     <title>Portfolio</title>
   </head>
-  <body class="font-poppins bg-white text-white">
+  <body class="font-poppins bg-white text-zinc-900">
     <noscript>You need to enable JavaScript to run this application.</noscript>
     <div id="root"></div>
   </body>
