New: Build website's skills component and some theme changes

--- a/front-end-react/public/index.html
+++ b/front-end-react/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width = device-width, initial-scale = 1" />
     <meta name="theme-color" content="#18181b" />
     <title>Portfolio</title>
   </head>
-  <body class="font-poppins bg-white text-zinc-900">
+  <body class="font-poppins bg-zinc-900 text-white">
     <noscript>You need to enable JavaScript to run this application.</noscript>
     <div id="root"></div>
   </body>
